--- a/lab_1/lab_1.vcxproj.filters
+++ b/lab_1/lab_1.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClInclude Include="lab_1.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="Shape.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="fabric.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
