--- a/lab_1/lab_1.vcxproj
+++ b/lab_1/lab_1.vcxproj
@@ -141,8 +141,10 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="fabric.h" />
     <ClInclude Include="lab_1.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Shape.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
